* Added the manage-metrics endpoint to the ReviewMetrics model.
* Added the create method to the Customer proxy model.
* Added reset endpoint to ReviewConfirmation proxy model.
* Rename kiosk review proxy model to ReviewConfirmation.
* Added Kiosk Review proxy model.

=== 0.5.9 2014-06-11

* Added Custom Invitation proxy model for V2 API.
* Added Review Metrics proxy model for V2 API.
* Added Customer Call proxy model for V2 API.

=== 0.5.8 2014-05-28

* Removed old metrics calls from Enterprise and Company.
* Added Company and Enterprise Metrics proxy models.
* Modified the way company subscription parameters are sent.
* Added Promo proxy model for V2
* Added Account Level proxy model for V2.
* Added generate-receipt company transaction method.
* Added company transaction proxy model for V2.

=== 0.5.7 2014-05-13

* Added customer_call_credit V2 API proxy model.
* Added customer call metrics V2 API method.
* Added company subscription proxy model for V2.
* Added primary company user endpoint to V2 company user.
* Added Appointment model for V2 with list method.
* Added email invitation metrics proxy model.
* Added reset functionality for email invitations.
* Added EmailInvitation proxy model for V2 API.
* Added HandwrittenReview model for V2 with find, list, update methods.
* Added HandwrittenReviewMetrics model for V2 with list method.

=== 0.5.6 2014-04-29

* Remove company user params from company create call.
* Added reset password method to V2 enterprise user.
* Added company reactivate method to V2.
* Fixed enterprise user create method.
* Fixed enterprise user parameter name.
* Added reviewTopic and PrivateFeedbackTopic to ve
* Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
* Added Enterprise Locations call to the V2 enterprise model.

=== 0.5.5 2014-04-15

* Added the Company Settings update method for V2.
* Updated the Smart Invite Settings updated method to not require an id.